# hotel-cancellation-prediction

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_MAP.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  thesis_python_roadmap.md
.claude/: settings.json  settings.local.json
.claude/agents/: artifact-contract-validator.md  notebook-readability-reviewer.md
.claude/hooks/: format_python.py  guard_canonical.py
.claude/skills/retrain-and-verify/: SKILL.md
.claude/skills/swap-dataset/: SKILL.md
.github/workflows/: ci.yml
assets/: manifest.json
demo/: DEFENSE_RUNBOOK.md  README.md  quick_train.py  sample_requests.py  start_server.py  start_server_ph.py
docs/: consultation_runbook.md  figure_manifest.md  powerbi_dashboard_guide.md  provenance.md
docs/defense/: defense_guide_2026-06.md  defense_script.md  practice_qa.md  slide_content_guide.md
docs/thesis_drafts/: NUMBER_CORRECTIONS.md  README.md  chapter_i_iii_updates.md  chapter_iv_results_and_discussion.md  chapter_v_conclusion.md  complete_thesis.md  jargon_translation_guide.md  references_and_ai_declaration.md
docs/thesis_drafts/chapter_iv_tables/: table_01_classification_cv_benchmark.md  table_02_chronological_oot_test.md  table_03_adr_regression.md  table_04_shap_feature_importance.md  table_05_cost_savings_by_threshold.md  table_06_hypothesis_evidence_verdict.md  table_07_risk_tier_revenue_exposure.md  table_08_threshold_policy_operational.md  table_09_chapter_iv_at_a_glance.md
docs/thesis_drafts/paper_figures/: README.md
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_deep_analysis.ipynb  04_adr_forecasting.ipynb  05_explainability.ipynb  06_business_analytics.ipynb  07_model_selection.ipynb  08_model_monitoring.ipynb  09_model_comparison.ipynb  10_sensitivity_analysis.ipynb  11_transferability_ph.ipynb  12_stratified_kfold_cv.ipynb  README.md  adr_arima.ipynb  adr_nn.ipynb  analysis.ipynb  dice.ipynb  eda.ipynb  main.ipynb
notebooks/ph/: 01_eda.ipynb  02_modeling.ipynb  03_deep_analysis.ipynb  04_adr_forecasting.ipynb  05_explainability.ipynb  06_business_analytics.ipynb  07_model_selection.ipynb  08_model_monitoring.ipynb  09_model_comparison.ipynb  10_sensitivity_analysis.ipynb  11_transferability.ipynb  12_stratified_kfold_cv.ipynb  README.md
reports/: dedup_sensitivity.json
reports/cv/: philippine_stratified_10fold_folds.csv  philippine_stratified_10fold_summary.json  portugal_stratified_10fold_folds.csv  portugal_stratified_10fold_summary.json
reports/ph/: baseline_comparison.json  champion_summary.json  expanding_window_cv.json  learning_curves.json  model_family_comparison.json  ph_adr_regressor_metrics.json  ph_threshold_sweep.csv  ph_transferability.json  shap_analysis.json
scripts/: adapt_dataset.py  benchmark.py  check.py  check_artifacts.py  check_metrics.py  compute_live_drift.py  create_conceptual_systems_diagram.py  create_deployment_diagram.py  dedup_sensitivity.py  demo_check.py  export_adr_predictions.py  export_predictions.py  fairness_check.py  make_essential_figures.py  notebooks.py  prep_data.py  rebuild_shap_summary_plot.py  repro.py  sample_requests.py  seed_demo_predictions.py  server.ps1  stratified_cv.py  sync_check.py  thesis.py  train.py  train_ph.py  verify.py
src/: __init__.py  config.py
src/app/: __init__.py  main.py  ph_main.py  ph_schemas.py  ph_ui.py  schemas.py  ui.py
src/data/: __init__.py  load.py  load_ph.py
src/eval/: __init__.py  benchmark.py  notebook_utils.py  repro.py  statistical.py  thesis.py  verify.py
src/features/: __init__.py  build.py
src/models/: __init__.py  baselines.py  metrics.py  train.py  tuning.py
src/pipelines/: __init__.py  train.py
src/serving/: __init__.py  inference.py  inference_ph.py  prediction_log.py  prediction_log_ph.py
src/utils/: __init__.py  business.py  drift.py  logging_utils.py  reproducibility.py  thresholds.py  validate_data.py
tests/: conftest.py  test_baselines.py  test_business.py  test_drift.py  test_inference_contract.py  test_integration_train_serve.py  test_load_ph.py  test_metrics.py  test_model_benchmark.py  test_prediction_log.py  test_preprocessing.py  test_schemas.py  test_split_and_leakage.py  test_statistical.py  test_thresholds.py  test_training_pipeline.py  test_tuning.py  test_validate_data.py
