[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-booking-cancellation"
version = "0.1.0"
description = "End-to-end hotel booking cancellation modeling and serving."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true
check_untyped_defs = true
explicit_package_bases = true
files = [
  "src/config.py",
  "src/data",
  "src/features",
  "src/models",
  "src/pipelines",
  "src/serving",
  "src/utils",
  "src/app/main.py",
  "src/app/schemas.py",
  "src/eval/repro.py",
  "src/eval/benchmark.py",
  "src/eval/statistical.py",
  "src/eval/thesis.py",
  "scripts/train.py",
  "scripts/benchmark.py",
  "scripts/thesis.py",
  "scripts/verify.py",
  "scripts/repro.py",
  "scripts/prep_data.py",
  "scripts/check_artifacts.py",
  "scripts/check_metrics.py",
  "tests",
]
exclude = "(?x)(^notebooks[\\\\/])"

[[tool.mypy.overrides]]
module = ["src.eval.verify", "src.app.ui"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = [
  "src/app/ui.py",
  "src/eval/*",
  "src/models/tuning.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
