[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-booking-cancellation"
version = "0.1.0"
description = "End-to-end hotel booking cancellation modeling and serving."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128",
  "gradio>=6.4",
  "joblib>=1.5",
  "lightgbm>=4.6",
  "matplotlib>=3.10",
  "numpy>=2.3",
  "optuna>=4.2",
  "pandas>=2.3",
  "pydantic>=2.12",
  "scikit-learn>=1.8",
  "scipy>=1.17",
  "seaborn>=0.13",
  "shap>=0.51",
  "statsmodels>=0.14",
  "uvicorn>=0.40",
  "xgboost>=3.1",
]

[project.optional-dependencies]
nn = ["tensorflow>=2.20"]
dev = [
  "bandit>=1.8",
  "detect-secrets>=1.5",
  "ipykernel>=7.2",
  "jupyterlab>=4.4",
  "mypy>=1.15",
  "nbconvert>=7.17",
  "nbformat>=5.10",
  "pip-audit>=2.7",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 ignored because ruff format enforces line-length; lint rule is redundant
ignore = ["E501"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
# Pin the analysis platform so local runs (Windows) and CI (Linux) check the
# same code paths; sys.platform-guarded branches are pruned consistently.
platform = "linux"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true
check_untyped_defs = true
explicit_package_bases = true
files = [
  "src/config.py",
  "src/data",
  "src/features",
  "src/models",
  "src/pipelines",
  "src/serving",
  "src/utils",
  "src/app/main.py",
  "src/app/schemas.py",
  "src/app/ui.py",
  "src/eval/repro.py",
  "src/eval/benchmark.py",
  "src/eval/statistical.py",
  "src/eval/thesis.py",
  "scripts/train.py",
  "scripts/benchmark.py",
  "scripts/check.py",
  "scripts/notebooks.py",
  "tests",
]
exclude = "(?x)(^notebooks[\\\\/])"

# verify.py uses heavily dynamic pandas .loc accessors and sklearn model objects
# that produce ~100+ false-positive type errors. Suppressed until pandas-stubs improve.
[[tool.mypy.overrides]]
module = ["src.eval.verify"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
tmp_path_retention_policy = "none"
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
  # lbfgs legitimately struggles on small test datasets (~1k rows) with 200+ OHE
  # features; production training uses 95k rows where it converges without issue.
  "ignore::sklearn.exceptions.ConvergenceWarning",
  # sklearn/LightGBM internal: LightGBM fitted inside a Pipeline receives a numpy
  # array from ColumnTransformer (correct behaviour); the check is a false positive.
  "ignore:X does not have valid feature names:UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
  "src/app/ui.py",
  "src/eval/verify.py",
  "src/eval/thesis.py",
  "src/eval/repro.py",
  "src/eval/notebook_utils.py",
  "src/models/tuning.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
